--- a/Gestion_compte/pom.xml
+++ b/Gestion_compte/pom.xml
@@ -56,7 +56,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
